--- a/src/pages/Inicio.css
+++ b/src/pages/Inicio.css
@@ -10,7 +10,7 @@ html {
 }
 
 /* Imagen Hero */
-img[src="/yugioh-home.webp"] {
+img[src="public\yugioh-home.webp"] {
   width: 100%;
   height: 450px;
   object-fit: cover;
